--- a/app/styles/less/_config.less
+++ b/app/styles/less/_config.less
@@ -1,5 +1,5 @@
 // USER VARIABLES SECTION
-
+@main_color: #ffffff;
 @accent: orange; // Accent Color
 @fontsize: 16px; // Body Font Size
 
@@ -18,7 +18,7 @@
 	}
 }
 
-.font("roboto-oh5", normal, 400, "../fonts/roboto-regular-webfont.woff2");
-.font("roboto-oh5", italic, 400, "../fonts/roboto-italic-webfont.woff2");
-.font("roboto-oh5", normal, 700, "../fonts/roboto-bold-webfont.woff2");
-.font("roboto-oh5", italic, 700, "../fonts/roboto-bolditalic-webfont.woff2");
+.font("Open-Sans", normal, 400, "../fonts/open-sans-v29-latin-regular.woff2");
+.font("Open-Sans", bold, 700, "../fonts/open-sans-v29-latin-700");
+.font("Bebas-Neue", normal, 700, "../fonts/BebasNeue-Regular.woff2");
+
