--- a/app/styles/less/blocks/_general.less
+++ b/app/styles/less/blocks/_general.less
@@ -1,4 +1,33 @@
 // GENERAL PROJECT STYLES
 
 body {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    color: @main_color;
+    
+}
+
+a {
+    text-decoration: none;
+    color: @main_color;
+}
+
+select {
+    color: @main_color; 
+}
+select option{
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+.container {
+    margin: 0 auto;
+    max-width: 1440px;
+}
+
+.header {
+    padding: 0 122px;
+    background-image: url(../../../images/dist/image1.jpg);
+    background-size: cover;
+    background-size: 100vw;
 }
