--- a/app/styles/less/blocks/_mixins.less
+++ b/app/styles/less/blocks/_mixins.less
@@ -3,3 +3,8 @@
 	font-weight: @fweight;
 	line-height: @lheight;
 }
+.fontstyle (@fname, @fstyle, @fweight) {
+	font-family: @fname;
+	font-style: @fstyle;
+	font-weight: @fweight;
+}
