Заголовок  кроме вып список и бг картинки

--- a/app/styles/less/_config.less
+++ b/app/styles/less/_config.less
@@ -1,7 +1,7 @@
 // USER VARIABLES SECTION
 @main_color: #ffffff;
-@accent: orange; // Accent Color
-@fontsize: 16px; // Body Font Size
+@accent: #FFB548; // Accent Color
+@fontsize: 16px; // size body
 
 // IMPORT SECTION
 
@@ -19,6 +19,6 @@
 }
 
 .font("Open-Sans", normal, 400, "../fonts/open-sans-v29-latin-regular.woff2");
-.font("Open-Sans", bold, 700, "../fonts/open-sans-v29-latin-700");
+.font("Open-Sans", normal, 700, "../fonts/open-sans-v29-latin-700");
 .font("Bebas-Neue", normal, 700, "../fonts/BebasNeue-Regular.woff2");
 
