--- a/app/styles/less/blocks/_mixins.less
+++ b/app/styles/less/blocks/_mixins.less
@@ -1,10 +1,10 @@
-.fontSize(@fsize, @fweight, @lheight) {
+.fontsize(@fsize, @fweight, @lheight) {
 	font-size: @fsize;
 	font-weight: @fweight;
 	line-height: @lheight;
 }
-.fontstyle (@fname, @fstyle, @fweight) {
+.fontstyle (@fname, @fstyle) {
 	font-family: @fname;
 	font-style: @fstyle;
-	font-weight: @fweight;
+	// font-weight: @fweight;
 }
