--- a/app/styles/less/blocks/_general.less
+++ b/app/styles/less/blocks/_general.less
@@ -3,13 +3,10 @@
 body {
     .fontstyle ("Open-Sans" sans-serif, normal);   
     font-size: @fontsize;
-    overflow: hidden;
+    // overflow: hidden;
     width: 100vw;
     height: 100vh;
     color: @main_color;
-    background: url(../../../images/dist/image1.jpg) no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
 }
 a:hover,
 a:active,
@@ -29,6 +26,16 @@ select option{
 .container {
     margin: 0 auto;
     max-width: 1440px;
-    padding: 0 120px;
 }
 
+.header {
+    background: url(../../../images/dist/image1.jpg) no-repeat;
+    background-size: 100% 100%;
+    padding: 0 120px;
+
+}
+.about {
+    background: url(../../../images/dist/image2.jpg) no-repeat;
+    background-size: 100% 100%;
+    padding: 0 120px;
+}
