--- a/app/styles/less/blocks/header.less
+++ b/app/styles/less/blocks/header.less
@@ -66,5 +66,5 @@
     align-items: center;
     .fontsize (12px, 700, 22px);
     text-transform: uppercase;
-    margin-bottom: 55px;
+    padding-bottom: 55px;
 }
