--- a/app/styles/less/blocks/_general.less
+++ b/app/styles/less/blocks/_general.less
@@ -45,6 +45,7 @@ select option{
     background-image: url(../../../images/dist/image2.jpg);
     background-size: cover;
     padding: 0 120px;
+    z-index: 10;
 // url(../../../images/dist/slide1.jpg), url(../../../images/dist/slide2.jpg), url(../../../images/dist/slide3.jpg)
 }
 
@@ -53,5 +54,8 @@ select option{
     background: url(../../../images/dist/image3.jpg) no-repeat;
     background-size: cover;
     padding: 0 120px;
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    height: 870px;
 }
