--- a/app/styles/less/blocks/title.less
+++ b/app/styles/less/blocks/title.less
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     .fontstyle("Bebas-Neue" sans-serif, normal);
-    max-width: 410px;   
 }
 .title div {
     .fontsize (24px, 700, 24px);
@@ -13,4 +12,15 @@
     letter-spacing: 3px;
 }
 
-// отступы для каждого раздела писать в разделе
+.title__about {
+    padding-top: 255px;
+    margin-bottom: 60px;
+    max-width: 410px;   
+}
+
+.title__features {
+    padding-top: 169px;
+    margin-bottom: 70px;
+    width: 411px;
+    margin-right: 113px;
+}
