--- a/app/styles/less/blocks/about.less
+++ b/app/styles/less/blocks/about.less
@@ -1,13 +1,10 @@
-.title {
-    padding-top: 255px;
-    margin-bottom: 60px;
-}
 .about__about {
     .fontsize (18px, 400, 22px);
     text-align: justify;
     margin-left: 189px;
     max-width: 365px;
     padding-bottom: 350px;
+    z-index: 10;
 }
 
 .about__about span {
