--- a/app/styles/less/blocks/_general.less
+++ b/app/styles/less/blocks/_general.less
@@ -59,3 +59,10 @@ select option{
     align-items: flex-end;
     height: 870px;
 }
+
+.requirements {
+    background: url(../../../images/dist/image4.jpg) no-repeat;
+    background-size: cover;
+    padding: 0 120px;
+
+}
