--- a/app/styles/less/blocks/title.less
+++ b/app/styles/less/blocks/title.less
@@ -24,3 +24,9 @@
     width: 411px;
     margin-right: 113px;
 }
+
+.requirements .title__requirements {
+    padding: 145px 0 148px;
+    justify-content: center;
+    align-items: center;
+}
