--- a/app/styles/less/blocks/_general.less
+++ b/app/styles/less/blocks/_general.less
@@ -3,11 +3,11 @@
 body {
     .fontstyle ("Open-Sans" sans-serif, normal);   
     font-size: @fontsize;
-    // overflow: hidden;
+    overflow-x: hidden;
     width: 100vw;
     height: 100vh;
     color: @main_color;
-    // background-color: black;
+    background-color: #0f0f0f;
 }
 a:hover,
 a:active,
