--- a/app/styles/less/blocks/about.less
+++ b/app/styles/less/blocks/about.less
@@ -30,6 +30,10 @@
     z-index: 1;
 }
 
+.about__slide__foto {
+    background: #FFFFFF;
+    border-radius: 6.33344px;
+}
 .about__slider{
     position: absolute;
     display: flex;
