--- a/app/styles/less/blocks/requirements.less
+++ b/app/styles/less/blocks/requirements.less
@@ -1,6 +1,26 @@
 .requirements__list {
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
+    flex-wrap: wrap;
     max-width: 574px;
     padding: 15px 20px 37px 20px;
+
+    &__item {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        max-width: calc(574px / 2 - 1px);
+
+        &__title {
+            .fontstyle("Bebas-Neue" sans-serif, normal);
+            .fontsize (24px, 700, 24px);
+            letter-spacing: 2px;
+            color: @accent;
+        }
+
+        &__subtitle {
+            .fontsize(18px, 400, 22px);
+        }
+    }
 }
+
