--- a/app/styles/less/blocks/_general.less
+++ b/app/styles/less/blocks/_general.less
@@ -16,6 +16,10 @@ a {
     color: @main_color;
 }
 
+h2 {
+    margin: 0;
+}
+
 p {
     margin: 0;
 }
@@ -38,6 +42,7 @@ select option{
     background-repeat: no-repeat;
     background-size: cover;
     padding: 0 120px;
+    height: 961px;
 }
 
 .about {
@@ -47,6 +52,7 @@ select option{
     // transform: matrix(-1, 0, 0, 1, 0, 0);
     background-size: cover;
     padding: 0 120px;
+    height: 1049px;
     z-index: 10;
 // url(../../../images/dist/slide1.jpg), url(../../../images/dist/slide2.jpg), url(../../../images/dist/slide3.jpg)
 }
@@ -70,5 +76,13 @@ select option{
     url(../../../images/dist/image4.jpg) no-repeat;
     background-size: cover;
     padding: 0 120px;
+    height: 961px;
+}
 
+.quotes {
+    background:radial-gradient(70.52% 37.27% at 24.21% 47.47%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 51.1%, #080A0B 99.74%),
+    url(../../../images/dist/image5.jpg)no-repeat;
+    background-size: cover;
+    padding: 0 120px;
+    height: 961px;
 }
