--- a/app/styles/less/blocks/about.less
+++ b/app/styles/less/blocks/about.less
@@ -1,15 +1,3 @@
-.about__about {
-    .fontsize (18px, 400, 22px);
-    text-align: justify;
-    margin-left: 189px;
-    max-width: 365px;
-    padding-bottom: 350px;
-    z-index: 10;
-}
-
-.about__about span {
-    text-decoration: underline @accent;
-}
 
 .about__slide1 {
     position: absolute;
@@ -45,8 +33,11 @@
 
 .about_line {
     position: absolute;
-    top: 426px;
+    top: 443px;
     left: 120px;
+    background-color: #FFFFFF;
+    height: 3px;
+    width: 712px;
     z-index: 4;
 }
 
