--- a/app/styles/less/blocks/features.less
+++ b/app/styles/less/blocks/features.less
@@ -5,29 +5,13 @@
 }
 
 .features__list {
+    display: flex;
+    flex-direction: column;
     position: relative;
-    .fontstyle("Bebas-Neue" sans-serif, normal);
-    .fontsize (36px, 700, 36px);
-    letter-spacing: 2px;
-    color: @accent;
-    max-width: 366px;
+    max-width: 380px;
     margin-right: 116px;
-    gap: 38px;
-
-    &__list2 {
-        display: none;
-    }
-
-    &__list3 {
-        display: none;
-    }
+    gap: 6px;
 }
 
-.features__list p {
-    .fontstyle ("Open-Sans" sans-serif, normal);
-	.fontsize(18px, 400, 22px);
-    color: @main_color;
-
-}
 
 
