--- a/app/styles/less/blocks/requirements.less
+++ b/app/styles/less/blocks/requirements.less
@@ -1,26 +1,21 @@
 .requirements__list {
     display: flex;
-    // flex-direction: column;
     flex-wrap: wrap;
-    max-width: 574px;
-    padding: 15px 20px 37px 20px;
+    max-width: 594px;
+    flex-grow: 1;
 
     &__item {
         display: flex;
         flex-direction: column;
+        border: 1px solid #979797;
+        padding: 15px 20px 47px 19px;
+        max-width: 296px;
+        gap: 7px;
         flex-grow: 1;
-        max-width: calc(574px / 2 - 1px);
-
-        &__title {
-            .fontstyle("Bebas-Neue" sans-serif, normal);
-            .fontsize (24px, 700, 24px);
-            letter-spacing: 2px;
-            color: @accent;
-        }
-
-        &__subtitle {
-            .fontsize(18px, 400, 22px);
-        }
     }
+
 }
 
+.requirements__list__item--width {
+    max-width: inherit;
+}
