--- a/app/styles/less/blocks/description.less
+++ b/app/styles/less/blocks/description.less
@@ -19,12 +19,6 @@
 
 // feauters
 
-.description--features {
-    .fontstyle ("Open-Sans" sans-serif, normal);
-	.fontsize(18px, 400, 22px);
-    color: @main_color; 
-}
-
 .description--feature2 {
     display: none;
 }
@@ -34,5 +28,14 @@
 }
 
 // quotes
+
+.description--quotes {
+    max-width: 435px;
+}
+
+.description--opacity {
+    opacity: 0.5;
+}
+
 
 
