--- a/app/styles/less/blocks/title.less
+++ b/app/styles/less/blocks/title.less
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     .fontstyle("Bebas-Neue" sans-serif, normal);
+    gap: 9px;
 }
 .title div {
     .fontsize (24px, 700, 24px);
