--- a/app/styles/less/blocks/_general.less
+++ b/app/styles/less/blocks/_general.less
@@ -87,13 +87,13 @@ select option{
     height: 961px;
 }
 
-.subscribe__footer {
+.subscribe {
     background: 
                 // radial-gradient(45.43% 53.19% at 50% 50%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 46.15%, #080A0B 99.74%),
                 // radial-gradient(51.83% 41.42% at 48.17% 50%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 67.58%, #060708 99.74%),
                 url(../../../images/dist/skull.jpg) no-repeat;
     background-color: #080A0B;
-    background-position: 160px 20px;
-    padding: 0 120px;
-    height: 960px;
+    background-position: 160px 45px;
+    padding: 221px 120px 0 120px;
+
 }
