--- a/app/styles/less/blocks/subscribe.less
+++ b/app/styles/less/blocks/subscribe.less
@@ -18,8 +18,10 @@ input[type=email]{
     background: rgba(255, 255, 255, 0.08);
     border-radius: 5px;
     border: none;
+    outline: none;
     padding: 1px 1px 1px 21px;
     color: @accent;
+    margin-bottom: 174px;
 }
 
 ::placeholder {
@@ -27,3 +29,4 @@ input[type=email]{
     color: #ffffff;
     opacity: 0.5;
 }
+
