--- a/app/styles/less/blocks/_general.less
+++ b/app/styles/less/blocks/_general.less
@@ -95,5 +95,9 @@ select option{
     background-color: #080A0B;
     background-position: 160px 45px;
     padding: 221px 120px 0 120px;
+}
 
+.footer {
+    background-color: #080A0B;
+    padding: 0 120px 50px 120px;
 }
