--- a/app/styles/less/blocks/header.less
+++ b/app/styles/less/blocks/header.less
@@ -5,7 +5,7 @@
     text-transform: uppercase;
     padding: 22px 0 0 0;
     margin-bottom: 238px;
-    letter-spacing: 0.1em;
+    letter-spacing: 1.2px;
     &__main {
         display: flex;
         justify-content: center;
