--- a/app/styles/less/blocks/requirements.less
+++ b/app/styles/less/blocks/requirements.less
@@ -2,11 +2,14 @@
     display: flex;
     flex-wrap: wrap;
     max-width: 594px;
+    border-left: 1px solid #979797;
+    border-top: 1px solid #979797;
 
     &__item {
         display: flex;
         flex-direction: column;
-        border: 1px solid #979797;
+        border-right: 1px solid #979797;
+        border-bottom: 1px solid #979797;
         padding: 15px 20px 47px 19px;
         max-width: 297px;
         gap: 7px;
