--- a/app/styles/less/blocks/description.less
+++ b/app/styles/less/blocks/description.less
@@ -19,13 +19,13 @@
 
 // feauters
 
-.description--feature2 {
-    display: none;
+.description--feature {
+    color: @main_color;
+    .fontstyle ("Open-Sans" sans-serif, normal);
+    letter-spacing: normal;
+    
 }
 
-.description--feature3 {
-    display: none;
-}
 
 // quotes
 
