--- a/app/styles/less/blocks/description_title.less
+++ b/app/styles/less/blocks/description_title.less
@@ -5,6 +5,9 @@
     color: @accent;
 
     &--big {
+        position: relative;
+        display: flex;
+        align-items: center;
         .fontsize (36px, 700, 36px);
     }
 }
