--- a/app/styles/less/blocks/features.less
+++ b/app/styles/less/blocks/features.less
@@ -13,5 +13,51 @@
     gap: 6px;
 }
 
+input[type=radio] {
+    position: absolute;
+    left: -32px;
+    display: none;
+}
+
+.description__title--big label {
+    display: inline-block;
+    cursor: pointer;
+}
+
+.description__title--big label::after {
+    position: absolute;
+    display: inline-block;
+    box-sizing: border-box;
+    content: '';
+    width: 14px;
+    height: 14px;
+    left: -32px;
+    top: 9px;
+    border-radius: 50%;
+    border: 1px solid #ffffff;
+    cursor: pointer;
+}
+
+input[type=radio]:checked + label:before {
+    position: absolute;
+    display: block;
+    box-sizing: border-box;
+    content: '';
+    width: 13px;
+    height: 13px;
+    left: -32px;
+    top: 9px;
+    // display: none;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+}
 
 
+.description__title--big label span {
+    padding-top: 6px;
+    display: none;
+}
+
+input[type=radio]:checked + label span{
+    display: block;
+}
