--- a/app/styles/less/blocks/subscribe.less
+++ b/app/styles/less/blocks/subscribe.less
@@ -1,32 +1,45 @@
 .subscribe {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    gap: 45px;
-}
- 
-.subscribe__email {
-    display: flex;
-    gap: 18px;
+	display: flex;
+	gap: 45px;
+	align-items: center;
+	justify-content: center;
+
+	&__content {
+		display: flex;
+		flex-flow: column nowrap;
+		gap: 45px;
+	}
+
+	// можно писать вот так
+
+	&__email {
+		display: flex;
+		gap: 18px;
+	}
 }
 
-input[type=email]{
-    .fontsize (18px, 400, 25px);
-    width:367px;
-    height: 60px;
-    background: rgba(255, 255, 255, 0.08);
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    padding: 1px 1px 1px 21px;
-    color: @accent;
-    margin-bottom: 174px;
+// .subscribe__email {
+// 	display: flex;
+// 	gap: 18px;
+// }
+
+// FIXME: старайся как можно реже использовать селекторы по тегу, это лишняя работа для браузера при рендере страницы
+input[type="email"] {
+	.fontsize (18px, 400, 25px);
+	width: 367px;
+	height: 60px;
+	background: rgba(255, 255, 255, 0.08);
+	border-radius: 5px;
+	border: none;
+	outline: none;
+	padding: 1px 1px 1px 21px;
+	color: @accent;
+	// margin-bottom: 174px;
 }
 
+// FIXME: а если у тебя на проекте будет два инпута с разными placeholder то как будешь делать?
 ::placeholder {
-    .fontsize (14px, 400, 19px);
-    color: #ffffff;
-    opacity: 0.5;
+	.fontsize (14px, 400, 19px);
+	color: #ffffff;
+	opacity: 0.5;
 }
-
